add sample that runs from jpackaged app
some features, e.g., macOS notifications don't work without a propper application bundle